Some Facts section added

--- a/index.html
+++ b/index.html
@@ -51,28 +51,36 @@
         <!-- Some Facts -->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sint voluptatum eum possimus velit culpa aperiam officiis nemo. Vero esse, repellendus totam delectus aut quam expedita eos inventore odit. Distinctio.</p>
+            <p class="text-light-gray fact-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sint voluptatum eum possimus velit culpa aperiam officiis nemo. Vero esse, repellendus totam delectus aut quam expedita eos inventore odit. Distinctio.</p>
             <div class="facts-container">
-                 <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-                 <div class="fact">
-                    <img src="images/icons/ribon.png" alt="winner ribon" class="fact-icon">
+                 <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                 <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="winner ribon" class="fact-icon">
                     <h4 class="fact-number">54</h4>
                     <h5 class="fact-name">Award Winnings</h5>
+                    </div>
                  </div>
-                 <div class="fact">
-                    <img src="images/icons/projects.png" alt="projects" class="fact-icon">
+                 <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="projects" class="fact-icon">
                     <h4 class="fact-number">1458</h4>
                     <h5 class="fact-name">Project Finished</h5>
+                    </div>
                  </div>
-                 <div class="fact">
-                    <img src="images/icons/customers.png" alt="customers" class="fact-icon">
+                 <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="customers" class="fact-icon">
                     <h4 class="fact-number">590</h4>
                     <h5 class="fact-name">Clients Worked</h5>
+                    </div>
                  </div>
-                 <div class="fact">
-                    <img src="images/icons/email.png" alt="emails" class="fact-icon">
+                 <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="emails" class="fact-icon">
                     <h4 class="fact-number">22578</h4>
                     <h5 class="fact-name">Email Send</h5>
+                    </div>
                  </div>
             </div>
         </section>
