Sponsor Compnaies Added

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         </section>
         <!-- Some Facts -->
         <section class="some-facts">
-            <h3 class="section-title">Some Facts</h3>
+            <div class="fact-text">
+                <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray fact-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sint voluptatum eum possimus velit culpa aperiam officiis nemo. Vero esse, repellendus totam delectus aut quam expedita eos inventore odit. Distinctio.</p>
+            </div>
             <div class="facts-container">
                  <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
                  <div class="fact-card display-flex">
@@ -82,6 +84,19 @@
                     <h5 class="fact-name">Email Send</h5>
                     </div>
                  </div>
+            </div>
+        </section>
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. At corrupti molestiae obcaecati, assumenda dolores incidunt</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/amazon.png" alt="amazon">
+                <img src="images/sponsors/figma.png" alt="figma">
+                <img src="images/sponsors/google.png" alt="google">
+                <img src="images/sponsors/spotify.png" alt="spotify">
+                <img src="images/sponsors/telerama.png" alt="telerama">
             </div>
         </section>
 
