added features section with image and badge

--- a/index.html
+++ b/index.html
@@ -44,9 +44,41 @@
 
         </section>
         <!-- features you will love & enjoy -->
-        <section>
-            <h3 class="section-title">Features you will love & enjoy</h3>
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
             <p class="text-light-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem nihil repellendus delectus architecto assumenda illum nisi doloribus a voluptates eos laudantium officia, nostrum deleniti consequuntur itaque porro inventore facere maiores.</p>
+
+                <!-- feature card container -->
+                
+                <!-- div.feature-card*4>h4.feature-title+p.feature-description -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+
+            </div>
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span >Experience</span>
+                </button>
+            </div>
         </section>
         <!-- Some Facts -->
         <section class="some-facts">
